--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,13 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap'); */
 
 html,
 body,
 * {
   padding: 0;
   margin: 0;
-  /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
-  font-family: 'Shadows Into Light', cursive;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  /* font-family: 'Shadows Into Light', cursive; */
   box-sizing: border-box;
 }
 
@@ -164,14 +164,19 @@ span.text-red {
 .hero-banner-container button {
   border-radius: 15px;
   padding: 10px 16px;
-  background-color: #f02d34;
+  background-color: #dcdcdc;
   color: white;
-  border: none;
+  border: 1px solid;
   margin-top: 40px;
   font-size: 18px;
   font-weight: 500;
   cursor: pointer;
   z-index: 10000 !important;
+}
+
+.hero-banner-container button:hover {
+  background-color: #0362da;
+  border: none;
 }
 
 .hero-banner-container h3 {
@@ -189,9 +194,9 @@ span.text-red {
 .hero-banner-image {
   position: absolute;
   top: 0%;
-  right: 20%;
-  width: 450px;
-  height: 450px;
+  right: 30%;
+  width: 500px;
+  height: 500px;
 }
 
 .desc {
@@ -237,7 +242,7 @@ span.text-red {
 
 .footer-banner-container {
   padding: 100px 40px;
-  background-color: #f02d34;
+  background-color: #0362da;
   border-radius: 15px;
   position: relative;
   height: 400px;
@@ -256,7 +261,7 @@ span.text-red {
   border-radius: 15px;
   padding: 10px 16px;
   background-color: white;
-  color: red;
+  color: #0362da;
   border: none;
   margin-top: 40px;
   font-size: 18px;
@@ -267,7 +272,8 @@ span.text-red {
 .banner-desc .left h3 {
   font-weight: 900;
   font-size: 80px;
-  margin-left: 25px;
+  text-transform: uppercase;
+  /* margin-left: 25px; */
 }
 
 .banner-desc .left p {
@@ -283,6 +289,7 @@ span.text-red {
 }
 
 .banner-desc .right {
+  width: 35%;
   line-height: 1.4;
 }
 
@@ -292,7 +299,7 @@ span.text-red {
 }
 
 .banner-desc .right p {
-  font-size: 18px;
+  font-size: 14px;
 }
 
 .banner-desc .right .company-desc {
